--- a/index.html
+++ b/index.html
@@ -87,82 +87,74 @@
                     <input type="text" id="wdrukarki" name="wdrukarki"><br>
                     średnica filamentu:<br>
                     <input type="text" id="sfilamentu" name="sfilamentu"><br>
-                    <!-- zrobić coś w rodzaju ułożenia w stylu grid -->
                     Rodzaj filamentu:<br>
                     <div class="checkbox-container">
                         <div class="checkbox-column">
-                            <input type="checkbox" id="pla" name="filament" value="pla">
-                            <label for="pla">PLA</label>
-                            <input type="checkbox" id = "abs" name="filament" value="abs">
-                            <label for="abs">ABS</label>
-                            <input type="checkbox" id = "petg" name="filament" value="petg">
-                            <label for="abs">ABS</label>
-                        </div><br>
-                        <div class="checkbox-column">
-                            <input type="checkbox" id="nylon" name="filament" value="nylon">
-                            <label for="nylon">Nylon</label>
-                            <input type="checkbox" id="tpu" name="filament" value="tpu">
-                            <label for="tpu">TPU</label>
-                            <input type="checkbox" id="wood" name="filament" value="wood">
-                            <label for="wood">Drewniany PLA</label>
-                            <input type="checkbox" id = "pva" name="filament" value="pva">
-                            <label for="pva">PVA</label>
-                            <input type="checkbox" id="hips" name="filament" value="hips">
-                            <label for="hips">HIPS</label>
-                        </div><br>
-                        <div class="checkbox-column">
-                            <input type="checkbox" id="pc" name="filament" value="pc">
-                            <label for="pc">PC</label>
-                            <input type="checkbox" id="asa" name="filament" value="asa">
-                            <label for="asa">ASA</label>
-                            <input type="checkbox" id = "pp" name="filament" value="pp">
-                            <label for="pp">PP</label>
-                        </div><br>
-                        <div class="checkbox-column">
-                            <input type="checkbox" id="pmma" name="filament" value="pmma">
-                            <label for="pmma">PMMA</label>
-                            <input type="checkbox" id="pa" name="filament" value="pa">
-                            <label for="pa">PA</label>
-                            <input type="checkbox" id="tpe" name="filament" value="tpe">
-                            <label for="tpe">TPE</label>
+                            <input type="checkbox" id="pla" name="filament" value="PLA">
+                            <label for="pla">PLA</label><br>
+                            <input type="checkbox" id = "abs" name="filament" value="ABS">
+                            <label for="abs">ABS</label><br>
+                            <input type="checkbox" id = "petg" name="filament" value="PETG">
+                            <label for="petg">petg</label><br>
                         </div>
                         <div class="checkbox-column">
-                            <input type="checkbox" id = "pcabs" name="filament" value="pcabs">
-                            <label for="pcabs">PC-ABS</label>
-                            <input type="checkbox" id="ppgf" name="filament" value="ppgf">
-                            <label for="ppgf">PP-GF</label>
-                            <input type="checkbox" id="metal" name="filament" value="metal">
-                            <label for="metal">Metal PLA</label>
-                        </div><br>
-                        <div class="checkbox-column">
-                            <input type="checkbox" id = "pcabs" name="filament" value="pcabs">
-                            <label for="pcabs">PC-ABS</label>
-                            <input type="checkbox" id="ppgf" name="filament" value="ppgf">
-                            <label for="ppgf">PP-GF</label>
-                            <input type="checkbox" id="metal" name="filament" value="metal">
-                            <label for="metal">Metal PLA</label>
+                            <input type="checkbox" id="nylon" name="filament" value="Nylon">
+                            <label for="nylon">Nylon</label><br>
+                            <input type="checkbox" id="tpu" name="filament" value="TPU">
+                            <label for="tpu">TPU</label><br>
+                            <input type="checkbox" id="wood" name="filament" value="Wood PLA">
+                            <label for="wood">Drewniany PLA</label><br>
                         </div>
                         <div class="checkbox-column">
-                            <input type="checkbox" id = "pcabs" name="filament" value="pcabs">
-                            <label for="pcabs">PC-ABS</label>
-                            <input type="checkbox" id="ppgf" name="filament" value="ppgf">
-                            <label for="ppgf">PP-GF</label>
-                            <input type="checkbox" id="metal" name="filament" value="metal">
-                            <label for="metal">Metal PLA</label>
-                        </div><br>
-                        <div class="checkbox-column">
-                            <input type="checkbox" id="gitdpla" name="filament" value="gitdpla">
-                            <label for="gitdpla">Glow-in-the-dark PLA</label>
-                            <input type="checkbox" id="fpla" name="filament" value="fpla">
-                            <label for="fpla">Flex PLA</label>
-                            <input type="checkbox" id="cfpla" name="filament" value="cfpla">
-                            <label for="cfpla">Carbon Fiber PLA</label>
+                            <input type="checkbox" id = "pva" name="filament" value="PVA">
+                            <label for="pva">PVA</label><br>
+                            <input type="checkbox" id="hips" name="filament" value="HIPS">
+                            <label for="hips">HIPS</label><br>
+                            <input type="checkbox" id="pc" name="filament" value="PC">
+                            <label for="pc">PC</label><br>
                         </div>
                         <div class="checkbox-column">
-                            <input type="checkbox" id="cpla" name="filament" value="cpla">
-                            <label for="cpla">Conductive PLA</label>
-                        </div> 
-                    </div>
+                            <input type="checkbox" id="asa" name="filament" value="ASA">
+                            <label for="asa">ASA</label><br>
+                            <input type="checkbox" id = "pp" name="filament" value="PP">
+                            <label for="pp">PP</label><br>
+                            <input type="checkbox" id="pmma" name="filament" value="PMMA">
+                            <label for="pmma">PMMA</label><br>
+                        </div>
+                        <div class="checkbox-column">
+                            <input type="checkbox" id="pa" name="filament" value="PA">
+                            <label for="pa">PA</label><br>
+                            <input type="checkbox" id="tpe" name="filament" value="TPE">
+                            <label for="tpe">TPE</label><br>
+                            <input type="checkbox" id = "pcabs" name="filament" value="PC-ABS">
+                            <label for="pcabs">PC-ABS</label><br>
+                        </div>
+                        <div class="checkbox-column">
+                            <input type="checkbox" id="ppgf" name="filament" value="PP-GF">
+                            <label for="ppgf">PP-GF</label><br>
+                            <input type="checkbox" id="metal" name="filament" value="Metal PLA">
+                            <label for="metal">Metal PLA</label><br>
+                            <input type="checkbox" id="fludpla" name="filament" value="Fluorescent PLA">
+                            <label for="fludpla">Fluorescent PLA</label><br>
+                        </div>
+                        <div class="checkbox-column">
+                            <input type="checkbox" id="fpla" name="filament" value="Flex PLA">
+                            <label for="fpla">Flex PLA</label><br>
+                            <input type="checkbox" id="cfpla" name="filament" value="Carbon Fiber PLA">
+                            <label for="cfpla">Carbon Fiber PLA</label><br>
+                            <input type="checkbox" id="cpla" name="filament" value="Conductive PLA">
+                            <label for="cpla">Conductive PLA</label><br>
+                        </div>
+                    </div><br><br><br><br>
+                    Sposób transmisji danych:<br>
+                    <input type="checkbox" id="wifi" name="komunikacja" value="Wi-Fi">
+                    <label for="wifi">Wi-Fi</label>
+                    <input type="checkbox" id = "karta" name="komunikacja" value="Karta SD">
+                    <label for="karta">Karta SD</label>
+                    <input type="checkbox" id = "comp" name="komunikacja" value="USB">
+                    <label for="comp">USB</label>
+                    <input type="checkbox" id = "eth" name="komunikacja" value="Ethernet">
+                    <label for="eth">Ethernet</label><br>
                     wyświetlacz:
                     <input type="radio" id="dotykowy" name="wyswietlacz" value="dotykowy">
                     <label for="dotykowy">dotykowy</label>
@@ -186,7 +178,6 @@
                     <button type="submit" value="Wyślij">
                         Wyślij
                     </button>
-
                 </form>
             </aside>
     </body>
